# DOOH-AR-Senior-D

dooh_ai/: .gitignore  README.md  main.py  pyproject.toml  yolov8_test.ipynb
dooh_ai/ml_training/: README.dataset.txt  README.roboflow.txt  data.yaml
dooh_ai/ml_training/train/labels/: IMG_0129_JPG.rf.148134dd4dd62d13db419479fa20e72f.txt  IMG_0390_JPG.rf.f439350b33a6cbd4daf87c3b3c67aaef.txt  IMG_0470_jpg.rf.cbe0e815d454ee7680b33051304479c4.txt  IMG_0533_JPG.rf.29be868aa2141ab4021d0ee3a911d1da.txt  IMG_0621_JPG.rf.aeebb2798e505ce7c00323de834cb293.txt  IMG_0622_JPG.rf.2df2348c1ba45d82002edebd748a5f27.txt  IMG_0623_JPG.rf.046ec9e149082683b68e51384aeef377.txt  IMG_0748_jpg.rf.20e2296e9ec844ade7bde884ae54de5f.txt  IMG_0749_jpg.rf.f96d46e9a944005898817fe7d9ece908.txt  IMG_0750_jpg.rf.4ad9476a44322b0be205a399ebef3423.txt  IMG_1010_JPG.rf.87449e3efb060149efeabd761ef2aa1a.txt  IMG_1025_JPG.rf.f73b2de5687d8e0b82b7f8a3f236c458.txt  IMG_1203_JPG.rf.7552a00787516d5a195a3a5ab4dac4d2.txt  IMG_2388_jpg.rf.9bef4f92bdadde9c315760bbaa6fde44.txt  IMG_2908_jpg.rf.91b4e94dabbd92f7074a2f1a0b02e169.txt  IMG_3091_JPG.rf.8002a3ba35a353cf798386424627316f.txt  IMG_3092_JPG.rf.1b8ee8fc8ae941f504170a8cea3bfbdd.txt  IMG_3093_JPG.rf.5da721a44b45cce1e30533753601546f.txt  IMG_3095_JPG.rf.624827cb96a5f9c3786a4ae97a63b087.txt  IMG_3097_JPG.rf.0de0a62214626ae8756915584e020fab.txt  IMG_3098_JPG.rf.326e9e426d8cbc2f36b0063186827516.txt  IMG_3101_JPG.rf.ca966ac9213c29d209c3200bb8c22966.txt  IMG_3102_JPG.rf.73071e325fc1cc0697a8eea6294a5772.txt  IMG_3104_JPG.rf.a20c31e9d65581df5d00ff840b563aac.txt  IMG_3105_JPG.rf.b8fd9ff8bd2bd543e7fc707290ac028d.txt  IMG_3106_JPG.rf.d52663ce60846d25913d74b3fe4e1c1f.txt  IMG_3107_JPG.rf.c130f0cb0ab6a9ca4409cd2999b97558.txt  IMG_3108_JPG.rf.d1a12c28620c272654f12bb405c0fe08.txt  (+376 more)
dooh_ai/scripts/: heic_to_jpg.py
